# monzo-webhook-rs

./: Cargo.toml  LICENSE  README.md
src/: counterparty.rs  decline.rs  has_extra_data.rs  lib.rs  merchant.rs  metadata.rs  string_boolean.rs  tests.rs  tests.txt
src/metadata/: faster_payment.rs  flex_transaction.rs  ledger.rs  merchant_transaction.rs  money_transfer.rs  monzo_to_monzo.rs  shared_metadata.rs
