[package]
name = "monzo-webhook"
description = "Serde-compatible structs containing the data from a Monzo bank webhook"
authors = [
    "Lily Hopkins <lily@hpkns.uk>",
]
homepage = "https://github.com/lilopkins/monzo-webhook-rs"
repository = "https://github.com/lilopkins/monzo-webhook-rs"
license = "MIT"
version = "0.4.0"
edition = "2024"
categories = [
    "data-structures",
    "finance",
]
keywords = [
    "monzo",
    "bank",
    "webhook",
]

[features]
default = ["decode_everything"]
decode_everything = ["dep:serde_json"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.148", optional = true }

[dev-dependencies]
serde_json = "1.0.148"
